<resources>
    <string name="app_name">MotionUI</string>
    <string name="play">PLAY</string>
    <string name="name">CANDY \n BUST</string>
    <string name="discription_msg">Simple Dummy text to display. Simple Dummy text to display.</string>
    <string name="read_more">Read More</string>
    <string name="download">Download</string>
    <string name="next">Next</string>
    <string name="wallet_bal">Wallet Balance:</string>
    <string name="ready_to_play">Ready  to play?</string>
    <string name="oswald">OSWALD</string>
    <string name="confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
