<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.app.motion.ui.activity.DownloadPlayActivity" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llMainViewDownload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:src="@drawable/rectangle_box" />

                <TextView
                    style="@style/TextViewName"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/ivLogo"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/txtClose"
                    style="@style/ViewWrap"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_horizontal"
                    android:onClick="@{(v)->activity.cancelProcess()}"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="X"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/txtDis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivLogo"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/discription_msg"
                    android:textColor="@color/color_gray_dark"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDis"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:text="@string/read_more"
                    android:textColor="@color/color_progress"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />

            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp">

                <ImageView
                    android:id="@+id/ivScreenOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:background="@color/color_gray"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/ivScreenTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:background="@color/color_gray"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/llDownView"
                    style="@style/ButtonCommon"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:onClick="@{(v)->activity.downloadClick()}"
                    android:orientation="vertical"
                    android:padding="@dimen/_6sdp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download"
                        android:textColor="@color/color_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30 MB"
                        android:textColor="@color/color_white" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rlProgressView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/pbDownloadView"
                        style="@style/ProgressBarHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:indeterminate="false"
                        android:max="100"
                        android:minHeight="@dimen/_42sdp"
                        android:progress="1"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/txtDownloadStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="10 MB / 30 MB"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCancelSucessView"
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                android:layout_gravity="center"
                android:background="@drawable/cricle_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ivCancelDownload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/animated_vector_cross" />

                <ImageView
                    android:id="@+id/ivDownloadSucess"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/animated_check" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnPlay"
                style="@style/RelativePlayBlue"
                android:layout_height="@dimen/_44sdp"
                android:layout_margin="@dimen/_10sdp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtPlay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/play"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_14sdp" />

                <Button
                    android:id="@+id/btnBlink"
                    style="@style/ButtonPlayWhite"
                    android:background="@color/color_white"
                    android:onClick="@{(v)->activity.playClick()}"
                    android:visibility="visible" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>